# anything

./: .gitignore  Cargo.toml  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  typed-router.d.ts  uno.config.ts  vite.config.ts
oss/: Cargo.toml
oss/examples/: copy.rs  oss_server.rs  walkdir.rs
oss/src/: error.rs  ext.rs  lib.rs  server.rs
pkg_service/: .gitignore  Cargo.toml  anything.db
pkg_service/examples/sqlite/: Cargo.toml
pkg_service/migrations/: 20240220133141_package.down.sql  20240220133141_package.up.sql  20240220133401_package_category.down.sql  20240220133401_package_category.up.sql  20240220133441_package_category_relation.down.sql  20240220133441_package_category_relation.up.sql  20240525124229_all_table_add_sync_field.down.sql  20240525124229_all_table_add_sync_field.up.sql  20240526130208_delete_record_table.down.sql  20240526130208_delete_record_table.up.sql
pkg_service/src/: lib.rs
pkg_service/src/abi/: error.rs
pkg_service/src/abi/types/: category.rs  del_record.rs  mod.rs  package.rs  relation.rs
pkg_service/src/pkg/: manager.rs  mod.rs  sync.rs
src-tauri/: .env  Cargo.toml  anything.db  tauri.conf.json
src-tauri/examples/sqlite/: Cargo.toml  todos.db  todos.db-shm  todos.db-wal
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240220133401_package_category.down.sql  20240220133401_package_category.up.sql  20240220133441_package_category_relation.up.sql
src-tauri/package-search/: Cargo.toml  anything.db
src-tauri/package-search/examples/: join.rs
src-tauri/package-search/examples/sqlite/: .env  todos.db
src-tauri/package-search/examples/sqlite/src/: main.rs
src-tauri/package-search/migrations/: 20240220133141_package.down.sql  20240220133141_package.up.sql  20240220133401_package_category.up.sql  20240220133441_package_category_relation.down.sql  20240221013235_package_func.down.sql  20240221013235_package_func.up.sql
src-tauri/package-search/src/: lib.rs
src-tauri/package-search/src/abi/: error.rs  mod.rs  types.rs
src-tauri/package-search/src/abi/types/: category.rs  mod.rs  package.rs  (+1 more)
src-tauri/package-search/src/pack/: manager.rs  mod.rs
src-tauri/package-search/src/pkg/: manager.rs  mod.rs
src-tauri/src/: const_var.rs  db_init.rs  fs.rs  main.rs  oss.rs  pkg.rs  settings.rs  utils.rs
(+41 files in other folders)
