[package]
name = "oss"
version = "0.1.0"
edition = "2021"

[dependencies]
rfd = { version = "0.14.0", features = ["tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["fs", ] }

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = ["full"] }
