[package]
name = "pkg_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
