[package]
name = "anything"
version = "0.1.0"
description = "An app that handles everything for me"
authors = ["yjhtry"]
license = ""
repository = ""
default-run = "anything"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all"] }
pkg_service = {path = "../pkg_service"}
anyhow = "1.0.80"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
